load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

## OCaml
bool_flag( name = "always-link", build_setting_default = False )
config_setting( name = "enable_always_link", flag_values = { ":always-link": "True" })
config_setting( name = "disable_always_link", flag_values = { ":always-link": "False" })

bool_flag( name = "debug", build_setting_default = False)
config_setting( name = "enable_debug", flag_values = { ":debug": "True" })
config_setting( name = "disable_debug", flag_values = { ":debug": "False" })

bool_flag( name = "tooling", build_setting_default = True )
config_setting( name = "enable_tooling", flag_values = { ":tooling": "True" })
config_setting( name = "disable_tooling", flag_values = { ":tooling": "False" })

bool_flag( name = "threads", build_setting_default = True )
config_setting( name = "enable_threads", flag_values = { ":threads": "True" })
config_setting( name = "disable_threads", flag_values = { ":threads": "False" })

bool_flag( name = "verbose", build_setting_default = False)
config_setting( name = "enable_verbose", flag_values = { ":verbose": "True" })
config_setting( name = "disable_verbose", flag_values = { ":verbose": "False" })
